k8s/service.yaml
# 애플리케이션 Service (ClusterIP)
apiVersion: v1
kind: Service
metadata:
  name: vac-hub-test-svc
  namespace: grpc-test
  annotations:
    # Gateway API가 Pod를 직접 타겟팅(NEG)하도록 설정
    cloud.google.com/neg: '{"gateway": true}'
spec:
  type: ClusterIP
  selector:
    app: vac-hub-test
  ports:
  - name: grpc
    protocol: TCP
    port: 50051
    targetPort: 50051
    # ADDED: 이 포트가 gRPC 프로토콜을 사용함을 명시적으로 알려줍니다.
    # appProtocol: GRPC
    appProtocol: kubernetes.io/h2c
