k8s/gateway.yaml
# 3. Kubernetes Gateway: GKE에 Cloud Load Balancer 생성을 요청합니다.
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: vac-hub-gateway
  namespace: grpc-test
spec:
  # 표준 GKE L7 로드밸런서 클래스를 사용합니다.
  #gatewayClassName: gke-l7-gxlb
  gatewayClassName: gke-l7-global-external-managed  
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate # 로드밸런서에서 TLS 종료
      certificateRefs:
      - name: grpc-cert # 로컬에서 생성한 TLS Secret
        kind: Secret # 참조하는 리소스의 종류
        group: ""
---
# 4. HTTPRoute: Gateway로 들어온 트래픽을 서비스로 라우팅합니다.
# gRPC는 HTTP/2 기반이므로 HTTPRoute로 처리가능합니다.
# GCPBackendPolicy(타임아웃용)를 필터로 연결
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vac-hub-http-route
  namespace: grpc-test
spec:  
  parentRefs:
  - kind: Gateway
    name: vac-hub-gateway
  hostnames:
  - "grpc.example.com"
#    sectionName: https
  rules:
  - backendRefs:
    - name: vac-hub-test-svc
      port: 50051
